package br.com.koruthos.atividade2.model;

public interface Elevador {
    void subir();

    void descer();

    void parar();

    void quebrar();

    void consertar();

    void acionarServicoManutencao();

    void tocarMusica();

    public void avisarPassageiros();
}
